# samp_discordrichpresent

./: CMakeLists.txt  README.md
source/: discord.cpp  dllmain.cpp
